--- a/.github/workflows/helloworld.yaml
+++ b/.github/workflows/helloworld.yaml
@@ -5,11 +5,12 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+  workflow_dispatch:
+    
 
 jobs:
   hello:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
       - name: Run hello world
         run: echo "Hello world"
